feature : real time messaging

--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.344.0",
     "nanoid": "^5.0.6",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
